# ComfyUI-BiRefNet-ZHO

./: README.md  __init__.py  birefnet.py  config.py  dataset.py  pyproject.toml  requirements.txt
models/: baseline.py
models/backbones/: build_backbone.py  pvt_v2.py  swin_v1.py
models/models/: common.py
models/modules/: aspp.py  decoder_blocks.py  lateral_blocks.py
models/refinement/: refiner.py
